project.output
Terminals unused in grammar

    KW_THEN
    DL_DOT


Grammar

    0 $accept: program $end

    1 program: %empty

    2 $@1: %empty

    3 program: KW_MAIN ID DL_SMCOLON declarations subprogram_declarations $@1 compound_statement

    4 declarations: declarations type identifier_list DL_SMCOLON
    5             | %empty

    6 subprogram_declarations: subprogram_declaration subprogram_declarations
    7                        | %empty

    8 compound_statement: KW_BEGIN statement_list KW_END

    9 type: standard_type
   10     | standard_type DL_LBRACK INTEGER DL_RBRACK

   11 identifier_list: ID
   12                | ID DL_COMMA identifier_list

   13 standard_type: KW_INT
   14              | KW_FLOAT

   15 $@2: %empty

   16 subprogram_declaration: subprogram_head $@2 declarations compound_statement

   17 subprogram_head: KW_FUNC ID arguments DL_COLON standard_type DL_SMCOLON

   18 @3: %empty

   19 subprogram_head: KW_PROC ID @3 arguments DL_SMCOLON

   20 arguments: DL_LPAREN parameter_list DL_RPAREN
   21          | %empty

   22 parameter_list: identifier_list DL_COLON type
   23               | identifier_list DL_COLON type DL_SMCOLON parameter_list

   24 statement_list: statement
   25               | statement DL_SMCOLON statement_list

   26 statement: variable DL_ASSIGN expression
   27          | print_statement
   28          | procedure_statement
   29          | compound_statement
   30          | if_statement
   31          | while_statement
   32          | for_statement
   33          | KW_RETURN expression
   34          | KW_NOP

   35 variable: ID
   36         | ID DL_LBRACK expression DL_RBRACK

   37 print_statement: KW_PRINT
   38                | KW_PRINT DL_LPAREN expression DL_RPAREN

   39 procedure_statement: ID DL_LPAREN actual_parameter_expression DL_RPAREN

   40 if_statement: KW_IF expression DL_COLON statement elif_statement
   41             | KW_IF expression DL_COLON statement elif_statement KW_ELSE DL_COLON statement

   42 elif_statement: %empty
   43               | elif_statement KW_ELIF expression DL_COLON statement

   44 while_statement: KW_WHILE expression DL_COLON statement
   45                | KW_WHILE expression DL_COLON statement KW_ELSE DL_COLON statement

   46 for_statement: KW_FOR for_expression KW_IN for_expression DL_COLON statement KW_ELSE DL_COLON statement
   47              | KW_FOR for_expression KW_IN for_expression DL_COLON statement

   48 for_expression: simple_expression

   49 actual_parameter_expression: %empty
   50                            | expression_list

   51 expression_list: expression
   52                | expression DL_COMMA expression_list

   53 expression: simple_expression
   54           | simple_expression relop simple_expression

   55 simple_expression: term
   56                  | term addop simple_expression

   57 term: factor
   58     | factor multop term

   59 factor: INTEGER
   60       | FLOAT
   61       | variable
   62       | procedure_statement
   63       | OP_NEG factor
   64       | sign factor

   65 sign: OP_ADD
   66     | OP_SUB

   67 relop: OP_GT
   68      | OP_GE
   69      | OP_LT
   70      | OP_LE
   71      | OP_EQUAL
   72      | OP_NOTEQ
   73      | KW_IN

   74 addop: OP_ADD
   75      | OP_SUB

   76 multop: OP_MUL
   77       | OP_DIV


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <sval> (258) 3 11 12 17 19 35 36 39
    KW_MAIN <sval> (259) 3
    KW_FUNC <sval> (260) 17
    KW_PROC <sval> (261) 19
    KW_BEGIN <sval> (262) 8
    KW_END <sval> (263) 8
    KW_IF <sval> (264) 40 41
    KW_THEN <sval> (265)
    KW_ELSE <sval> (266) 41 45 46
    KW_ELIF <sval> (267) 43
    KW_NOP <sval> (268) 34
    KW_FOR <sval> (269) 46 47
    KW_WHILE <sval> (270) 44 45
    KW_RETURN <sval> (271) 33
    KW_PRINT <sval> (272) 37 38
    KW_IN <sval> (273) 46 47 73
    OP_ADD <sval> (274) 65 74
    OP_SUB <sval> (275) 66 75
    OP_MUL <sval> (276) 76
    OP_DIV <sval> (277) 77
    OP_LT <sval> (278) 69
    OP_LE <sval> (279) 70
    OP_GT <sval> (280) 67
    OP_GE <sval> (281) 68
    OP_EQUAL <sval> (282) 71
    OP_NOTEQ <sval> (283) 72
    OP_NEG <sval> (284) 63
    DL_SMCOLON <sval> (285) 3 4 17 19 23 25
    DL_DOT <sval> (286)
    DL_COMMA <sval> (287) 12 52
    DL_ASSIGN <sval> (288) 26
    DL_LPAREN <sval> (289) 20 38 39
    DL_RPAREN <sval> (290) 20 38 39
    DL_LBRACK <sval> (291) 10 36
    DL_RBRACK <sval> (292) 10 36
    DL_COLON <sval> (293) 17 22 23 40 41 43 44 45 46 47
    INTEGER <ival> (294) 10 59
    KW_INT <ival> (295) 13
    KW_FLOAT <ival> (296) 14
    FLOAT <fval> (297) 60


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program (44)
        on left: 1 3
        on right: 0
    $@1 (45)
        on left: 2
        on right: 3
    declarations <sym_node_ptr> (46)
        on left: 4 5
        on right: 3 4 16
    subprogram_declarations (47)
        on left: 6 7
        on right: 3 6
    compound_statement <sym_node_ptr> (48)
        on left: 8
        on right: 3 16 29
    type <ival> (49)
        on left: 9 10
        on right: 4 22 23
    identifier_list <val_node_ptr> (50)
        on left: 11 12
        on right: 4 12 22 23
    standard_type <ival> (51)
        on left: 13 14
        on right: 9 10 17
    subprogram_declaration <sym_ptr> (52)
        on left: 16
        on right: 6
    $@2 (53)
        on left: 15
        on right: 16
    subprogram_head <sym_node_ptr> (54)
        on left: 17 19
        on right: 16
    @3 (55)
        on left: 18
        on right: 19
    arguments (56)
        on left: 20 21
        on right: 17 19
    parameter_list (57)
        on left: 22 23
        on right: 20 23
    statement_list <sym_node_ptr> (58)
        on left: 24 25
        on right: 8 25
    statement <sym_node_ptr> (59)
        on left: 26 27 28 29 30 31 32 33 34
        on right: 24 25 40 41 43 44 45 46 47
    variable <sym_ptr> (60)
        on left: 35 36
        on right: 26 61
    print_statement <sym_node_ptr> (61)
        on left: 37 38
        on right: 27
    procedure_statement <sym_node_ptr> (62)
        on left: 39
        on right: 28 62
    if_statement <sym_node_ptr> (63)
        on left: 40 41
        on right: 30
    elif_statement (64)
        on left: 42 43
        on right: 40 41 43
    while_statement <sym_node_ptr> (65)
        on left: 44 45
        on right: 31
    for_statement <sym_node_ptr> (66)
        on left: 46 47
        on right: 32
    for_expression (67)
        on left: 48
        on right: 46 47
    actual_parameter_expression (68)
        on left: 49 50
        on right: 39
    expression_list (69)
        on left: 51 52
        on right: 50 52
    expression <sym_ptr> (70)
        on left: 53 54
        on right: 26 33 36 38 40 41 43 44 45 51 52
    simple_expression <sym_ptr> (71)
        on left: 55 56
        on right: 48 53 54 56
    term <sym_ptr> (72)
        on left: 57 58
        on right: 55 56 58
    factor <sym_ptr> (73)
        on left: 59 60 61 62 63 64
        on right: 57 58 63 64
    sign <sval> (74)
        on left: 65 66
        on right: 64
    relop (75)
        on left: 67 68 69 70 71 72 73
        on right: 54
    addop (76)
        on left: 74 75
        on right: 56
    multop (77)
        on left: 76 77
        on right: 58


State 0

    0 $accept: . program $end

    KW_MAIN  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program  go to state 2


State 1

    3 program: KW_MAIN . ID DL_SMCOLON declarations subprogram_declarations $@1 compound_statement

    ID  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    3 program: KW_MAIN ID . DL_SMCOLON declarations subprogram_declarations $@1 compound_statement

    DL_SMCOLON  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    3 program: KW_MAIN ID DL_SMCOLON . declarations subprogram_declarations $@1 compound_statement

    $default  reduce using rule 5 (declarations)

    declarations  go to state 6


State 6

    3 program: KW_MAIN ID DL_SMCOLON declarations . subprogram_declarations $@1 compound_statement
    4 declarations: declarations . type identifier_list DL_SMCOLON

    KW_FUNC   shift, and go to state 7
    KW_PROC   shift, and go to state 8
    KW_INT    shift, and go to state 9
    KW_FLOAT  shift, and go to state 10

    $default  reduce using rule 7 (subprogram_declarations)

    subprogram_declarations  go to state 11
    type                     go to state 12
    standard_type            go to state 13
    subprogram_declaration   go to state 14
    subprogram_head          go to state 15


State 7

   17 subprogram_head: KW_FUNC . ID arguments DL_COLON standard_type DL_SMCOLON

    ID  shift, and go to state 16


State 8

   19 subprogram_head: KW_PROC . ID @3 arguments DL_SMCOLON

    ID  shift, and go to state 17


State 9

   13 standard_type: KW_INT .

    $default  reduce using rule 13 (standard_type)


State 10

   14 standard_type: KW_FLOAT .

    $default  reduce using rule 14 (standard_type)


State 11

    3 program: KW_MAIN ID DL_SMCOLON declarations subprogram_declarations . $@1 compound_statement

    $default  reduce using rule 2 ($@1)

    $@1  go to state 18


State 12

    4 declarations: declarations type . identifier_list DL_SMCOLON

    ID  shift, and go to state 19

    identifier_list  go to state 20


State 13

    9 type: standard_type .
   10     | standard_type . DL_LBRACK INTEGER DL_RBRACK

    DL_LBRACK  shift, and go to state 21

    $default  reduce using rule 9 (type)


State 14

    6 subprogram_declarations: subprogram_declaration . subprogram_declarations

    KW_FUNC  shift, and go to state 7
    KW_PROC  shift, and go to state 8

    $default  reduce using rule 7 (subprogram_declarations)

    subprogram_declarations  go to state 22
    subprogram_declaration   go to state 14
    subprogram_head          go to state 15


State 15

   16 subprogram_declaration: subprogram_head . $@2 declarations compound_statement

    $default  reduce using rule 15 ($@2)

    $@2  go to state 23


State 16

   17 subprogram_head: KW_FUNC ID . arguments DL_COLON standard_type DL_SMCOLON

    DL_LPAREN  shift, and go to state 24

    $default  reduce using rule 21 (arguments)

    arguments  go to state 25


State 17

   19 subprogram_head: KW_PROC ID . @3 arguments DL_SMCOLON

    $default  reduce using rule 18 (@3)

    @3  go to state 26


State 18

    3 program: KW_MAIN ID DL_SMCOLON declarations subprogram_declarations $@1 . compound_statement

    KW_BEGIN  shift, and go to state 27

    compound_statement  go to state 28


State 19

   11 identifier_list: ID .
   12                | ID . DL_COMMA identifier_list

    DL_COMMA  shift, and go to state 29

    $default  reduce using rule 11 (identifier_list)


State 20

    4 declarations: declarations type identifier_list . DL_SMCOLON

    DL_SMCOLON  shift, and go to state 30


State 21

   10 type: standard_type DL_LBRACK . INTEGER DL_RBRACK

    INTEGER  shift, and go to state 31


State 22

    6 subprogram_declarations: subprogram_declaration subprogram_declarations .

    $default  reduce using rule 6 (subprogram_declarations)


State 23

   16 subprogram_declaration: subprogram_head $@2 . declarations compound_statement

    $default  reduce using rule 5 (declarations)

    declarations  go to state 32


State 24

   20 arguments: DL_LPAREN . parameter_list DL_RPAREN

    ID  shift, and go to state 19

    identifier_list  go to state 33
    parameter_list   go to state 34


State 25

   17 subprogram_head: KW_FUNC ID arguments . DL_COLON standard_type DL_SMCOLON

    DL_COLON  shift, and go to state 35


State 26

   19 subprogram_head: KW_PROC ID @3 . arguments DL_SMCOLON

    DL_LPAREN  shift, and go to state 24

    $default  reduce using rule 21 (arguments)

    arguments  go to state 36


State 27

    8 compound_statement: KW_BEGIN . statement_list KW_END

    ID         shift, and go to state 37
    KW_BEGIN   shift, and go to state 27
    KW_IF      shift, and go to state 38
    KW_NOP     shift, and go to state 39
    KW_FOR     shift, and go to state 40
    KW_WHILE   shift, and go to state 41
    KW_RETURN  shift, and go to state 42
    KW_PRINT   shift, and go to state 43

    compound_statement   go to state 44
    statement_list       go to state 45
    statement            go to state 46
    variable             go to state 47
    print_statement      go to state 48
    procedure_statement  go to state 49
    if_statement         go to state 50
    while_statement      go to state 51
    for_statement        go to state 52


State 28

    3 program: KW_MAIN ID DL_SMCOLON declarations subprogram_declarations $@1 compound_statement .

    $default  reduce using rule 3 (program)


State 29

   12 identifier_list: ID DL_COMMA . identifier_list

    ID  shift, and go to state 19

    identifier_list  go to state 53


State 30

    4 declarations: declarations type identifier_list DL_SMCOLON .

    $default  reduce using rule 4 (declarations)


State 31

   10 type: standard_type DL_LBRACK INTEGER . DL_RBRACK

    DL_RBRACK  shift, and go to state 54


State 32

    4 declarations: declarations . type identifier_list DL_SMCOLON
   16 subprogram_declaration: subprogram_head $@2 declarations . compound_statement

    KW_BEGIN  shift, and go to state 27
    KW_INT    shift, and go to state 9
    KW_FLOAT  shift, and go to state 10

    compound_statement  go to state 55
    type                go to state 12
    standard_type       go to state 13


State 33

   22 parameter_list: identifier_list . DL_COLON type
   23               | identifier_list . DL_COLON type DL_SMCOLON parameter_list

    DL_COLON  shift, and go to state 56


State 34

   20 arguments: DL_LPAREN parameter_list . DL_RPAREN

    DL_RPAREN  shift, and go to state 57


State 35

   17 subprogram_head: KW_FUNC ID arguments DL_COLON . standard_type DL_SMCOLON

    KW_INT    shift, and go to state 9
    KW_FLOAT  shift, and go to state 10

    standard_type  go to state 58


State 36

   19 subprogram_head: KW_PROC ID @3 arguments . DL_SMCOLON

    DL_SMCOLON  shift, and go to state 59


State 37

   35 variable: ID .
   36         | ID . DL_LBRACK expression DL_RBRACK
   39 procedure_statement: ID . DL_LPAREN actual_parameter_expression DL_RPAREN

    DL_LPAREN  shift, and go to state 60
    DL_LBRACK  shift, and go to state 61

    $default  reduce using rule 35 (variable)


State 38

   40 if_statement: KW_IF . expression DL_COLON statement elif_statement
   41             | KW_IF . expression DL_COLON statement elif_statement KW_ELSE DL_COLON statement

    ID       shift, and go to state 37
    OP_ADD   shift, and go to state 62
    OP_SUB   shift, and go to state 63
    OP_NEG   shift, and go to state 64
    INTEGER  shift, and go to state 65
    FLOAT    shift, and go to state 66

    variable             go to state 67
    procedure_statement  go to state 68
    expression           go to state 69
    simple_expression    go to state 70
    term                 go to state 71
    factor               go to state 72
    sign                 go to state 73


State 39

   34 statement: KW_NOP .

    $default  reduce using rule 34 (statement)


State 40

   46 for_statement: KW_FOR . for_expression KW_IN for_expression DL_COLON statement KW_ELSE DL_COLON statement
   47              | KW_FOR . for_expression KW_IN for_expression DL_COLON statement

    ID       shift, and go to state 37
    OP_ADD   shift, and go to state 62
    OP_SUB   shift, and go to state 63
    OP_NEG   shift, and go to state 64
    INTEGER  shift, and go to state 65
    FLOAT    shift, and go to state 66

    variable             go to state 67
    procedure_statement  go to state 68
    for_expression       go to state 74
    simple_expression    go to state 75
    term                 go to state 71
    factor               go to state 72
    sign                 go to state 73


State 41

   44 while_statement: KW_WHILE . expression DL_COLON statement
   45                | KW_WHILE . expression DL_COLON statement KW_ELSE DL_COLON statement

    ID       shift, and go to state 37
    OP_ADD   shift, and go to state 62
    OP_SUB   shift, and go to state 63
    OP_NEG   shift, and go to state 64
    INTEGER  shift, and go to state 65
    FLOAT    shift, and go to state 66

    variable             go to state 67
    procedure_statement  go to state 68
    expression           go to state 76
    simple_expression    go to state 70
    term                 go to state 71
    factor               go to state 72
    sign                 go to state 73


State 42

   33 statement: KW_RETURN . expression

    ID       shift, and go to state 37
    OP_ADD   shift, and go to state 62
    OP_SUB   shift, and go to state 63
    OP_NEG   shift, and go to state 64
    INTEGER  shift, and go to state 65
    FLOAT    shift, and go to state 66

    variable             go to state 67
    procedure_statement  go to state 68
    expression           go to state 77
    simple_expression    go to state 70
    term                 go to state 71
    factor               go to state 72
    sign                 go to state 73


State 43

   37 print_statement: KW_PRINT .
   38                | KW_PRINT . DL_LPAREN expression DL_RPAREN

    DL_LPAREN  shift, and go to state 78

    $default  reduce using rule 37 (print_statement)


State 44

   29 statement: compound_statement .

    $default  reduce using rule 29 (statement)


State 45

    8 compound_statement: KW_BEGIN statement_list . KW_END

    KW_END  shift, and go to state 79


State 46

   24 statement_list: statement .
   25               | statement . DL_SMCOLON statement_list

    DL_SMCOLON  shift, and go to state 80

    $default  reduce using rule 24 (statement_list)


State 47

   26 statement: variable . DL_ASSIGN expression

    DL_ASSIGN  shift, and go to state 81


State 48

   27 statement: print_statement .

    $default  reduce using rule 27 (statement)


State 49

   28 statement: procedure_statement .

    $default  reduce using rule 28 (statement)


State 50

   30 statement: if_statement .

    $default  reduce using rule 30 (statement)


State 51

   31 statement: while_statement .

    $default  reduce using rule 31 (statement)


State 52

   32 statement: for_statement .

    $default  reduce using rule 32 (statement)


State 53

   12 identifier_list: ID DL_COMMA identifier_list .

    $default  reduce using rule 12 (identifier_list)


State 54

   10 type: standard_type DL_LBRACK INTEGER DL_RBRACK .

    $default  reduce using rule 10 (type)


State 55

   16 subprogram_declaration: subprogram_head $@2 declarations compound_statement .

    $default  reduce using rule 16 (subprogram_declaration)


State 56

   22 parameter_list: identifier_list DL_COLON . type
   23               | identifier_list DL_COLON . type DL_SMCOLON parameter_list

    KW_INT    shift, and go to state 9
    KW_FLOAT  shift, and go to state 10

    type           go to state 82
    standard_type  go to state 13


State 57

   20 arguments: DL_LPAREN parameter_list DL_RPAREN .

    $default  reduce using rule 20 (arguments)


State 58

   17 subprogram_head: KW_FUNC ID arguments DL_COLON standard_type . DL_SMCOLON

    DL_SMCOLON  shift, and go to state 83


State 59

   19 subprogram_head: KW_PROC ID @3 arguments DL_SMCOLON .

    $default  reduce using rule 19 (subprogram_head)


State 60

   39 procedure_statement: ID DL_LPAREN . actual_parameter_expression DL_RPAREN

    ID       shift, and go to state 37
    OP_ADD   shift, and go to state 62
    OP_SUB   shift, and go to state 63
    OP_NEG   shift, and go to state 64
    INTEGER  shift, and go to state 65
    FLOAT    shift, and go to state 66

    $default  reduce using rule 49 (actual_parameter_expression)

    variable                     go to state 67
    procedure_statement          go to state 68
    actual_parameter_expression  go to state 84
    expression_list              go to state 85
    expression                   go to state 86
    simple_expression            go to state 70
    term                         go to state 71
    factor                       go to state 72
    sign                         go to state 73


State 61

   36 variable: ID DL_LBRACK . expression DL_RBRACK

    ID       shift, and go to state 37
    OP_ADD   shift, and go to state 62
    OP_SUB   shift, and go to state 63
    OP_NEG   shift, and go to state 64
    INTEGER  shift, and go to state 65
    FLOAT    shift, and go to state 66

    variable             go to state 67
    procedure_statement  go to state 68
    expression           go to state 87
    simple_expression    go to state 70
    term                 go to state 71
    factor               go to state 72
    sign                 go to state 73


State 62

   65 sign: OP_ADD .

    $default  reduce using rule 65 (sign)


State 63
